--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "fcc-library",
 	"version": "1.0.0",
-	"description": "boilerplate",
+	"description": "This is the completed challenge for the FCC personal library challenge",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
@@ -13,12 +14,14 @@
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5"
+		"mocha": "^10.0.0",
+		"mongoose": "^6.5.0",
+		"nodemon": "^2.0.19",
+		"zombie": "^6.1.4"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-project-library"
+		"url": "https://github.com/Freel11/personal-library-fcc"
 	},
 	"keywords": [
 		"node",
